# RL_model

./: .gitignore  README.md  environment.yml  evaluate.sh  evaluate_pool.sh  show.sh  tensor.sh  train.slurm
GRU/: GRU_NN.py  load.py  main.py
MLP/: LoadModel.py  Vec_sb3_jsbgym.py  customMLP.py  first_sb3_jsbgym.py
configs/: battle_train_config.yaml  create_init_pool_config.yaml  goal_point_config.yaml  stage_train_config.yaml  train_config.yaml
configs/agent/: ppo.yaml  ppo_1layer.yaml  ppo_1layer1.yaml  ppo_1layer2.yaml  ppo_1layer3.yaml  ppo_1layer4.yaml  ppo_1layer5.yaml  ppo_custom.yaml  ppo_gru.yaml  ppo_trans.yaml  ppo_transformer.yaml
configs/env/: c172_trajectory.yaml  c172_trajectory_continue.yaml  f16_goal_point.yaml  f16_tracking.yaml  f16_tracking_init.yaml  f16_tracking_stage1.yaml  f16_tracking_stage2.yaml  f16_trajectory.yaml  flying.yaml
jsb_env/jsbgym_m/: __init__.py  (+9 more)
jsbgym_m/: MANIFEST.in  README.md  __init__.py  assessors.py  coordinate.py  environment.py  properties.py  pyproject.toml  rewards.py  simulation.py  task_advanced.py  task_fly.py  task_tracking.py  tasks.py  utils.py  visualiser.py
jsbgym_m.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jsbgym_m/jsbgym_m/: coordinate.py  environment.py  rewards.py
jsbgym_m/jsbgym_m/tests/: LoadModel.py  stubs.py  test1.py  test_functional.py
jsbgym_m/tests/: LoadModel.py  stubs.py  test1.py  test_coordinate.py  test_task_tracking.py
scripts/: train.sh
src/: evaluate.py  evaluate_pool.py  retrain.py  show.py  stageTrain.py  train.py
test/: evaluate_goal_point.py  model_printer.py
(+29 files in other folders)
