[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jsbgym_m"
version = "0.1.0"
authors = [{ name = "YueYu" }]
readme = "README.md"
license = { text = "MIT" }
description = "A package of reinforcement learning environments for flight control using the JSBSim flight dynamics model."
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

requires-python = ">=3.8"
dependencies = ["numpy", "gymnasium", "jsbsim", "matplotlib"]

[project.urls]
Homepage = "https://github.com/sryu1/jsbgym_m"
Repository = "https://github.com/sryu1/jsbgym_m"
"Bug Tracker" = "https://github.com/sryu1/jsbgym_m/issues"


[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = { namespaces = false }
